--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
   text-align: center;
+  background-color: rgba(255, 153, 201, 0.85);
 }
 
 .App-header {
-  background-color: #ff99c9;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,35 +11,126 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #7ee280;
-}
-.App-header{
-  font-family: Jersey;
+  font-family: bitmap;
 }
 
-.app-title{
+
+.App-header video{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.input-form{
+  display: flex;
+  background-color: #F8E777;
+  margin: 0.5em;
+}
+
+.group-form{
+  color: #8447FF;
+}
+
+.app-title {
+  font-family: Jersey;
   font-size: 5em;
-  border: red;
+  color: #7EE280;
   text-shadow: 2px 2px #8447FF;
 }
 
+.changing-colors{
+  animation: colorChange 30s infinite alternate;
+}
+
+@keyframes colorChange {
+  0% {
+    color: #FF99C9;
+    text-shadow: 2px -2px #E42525;
+  }
+  10% {
+    color: #7EE280;
+    text-shadow: -2px 2px #FF99C9;
+  }
+  20% {
+    color: #F8E777;
+    text-shadow: -2px -2px #7EE280;
+  }
+  30% {
+    color: #8447FF;
+    text-shadow: 2px 2px #F8E777;
+  }
+  40% {
+    color: #85C7F2;
+    text-shadow: 2px -2px #8447FF;
+  }
+  50% {
+    color: #E42525;
+    text-shadow: -2px 2px #85C7F2;
+  }
+  60% {
+    color: #FF99C9;
+    text-shadow: -2px -2px #7EE280;
+  }
+  70% {
+    color: #7EE280;
+    text-shadow: -2px 2px #E42525;
+  }
+  80% {
+    color: #F8E777;
+    text-shadow: 2px -2px #FF99C9;
+  }
+  90% {
+    color: #8447FF;
+    text-shadow: 2px 2px #85C7F2;
+  }
+  100% {
+    color: #85C7F2;
+    text-shadow: -2px -2px #E42525;
+  }
+}
+
+
+
+
 .default-btn {
-  font-family: bitmap;
   font-size: 20px;
   color: #8447FF;
   background-color: #85C7F2;
   padding: 10px 15px;
   border-radius: 10px;
   border: 4px 2px #E42525;
-  margin: 2em;
+  margin: 1.2em;
 }
 
-.App-link {
-  color: #61dafb;
+.default-btn:hover{
+  color: #85C7F2 ;
+  background-color: #8447FF;
 }
-.test{
-  color: red;
-  background-color: blue;
+
+
+.icons-style{
+  font-size: 1.4em;
+  color: #E42525;
+  text-decoration: none;
 }
+.icons-style h4{
+  font-size: 0.2em;
+}
+.icons-style:hover{
+  color: #7ee280; 
+}
+
+.icons-group{
+  display: flex;
+  gap: 3em;
+}
+
+
+/* fonts */
 
 @font-face {
   font-family: Jersey;
