--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+/* 
+COLOR PALLETE WEBSITE:
+Carnation Pink: #FF99C9
+Light Green: #7EE280
+Maize Yellow: #F8E777
+Veronica Purple: #8447FF
+Light Blue Sky: #85C7F2
+Red: #E42525
+*/
+
+
 .App {
   text-align: center;
   background-color: rgba(255, 153, 201, 0.85);
@@ -5,31 +16,16 @@
   animation: cursorChange 1s infinite;
 }
 
-@keyframes cursorChange {
-  0% {
-    cursor: url('../images/rainbow.png'), auto;
-  }
-  50% {
-    cursor: url('../images/rainbow-reverse.png'), auto;
-  }
-  100% {
-    cursor: url('../images/rainbow.png'), auto;
-  }
-}
 
 .cards-style{
   background-color: blue;
-  color:red;
+  color:#E42525;
   padding: 1em;
   border-radius: 10px;
 }
 
 .App-header {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #7ee280;
   font-family: bitmap;
@@ -66,6 +62,143 @@
   animation: colorChange 30s infinite alternate;
   font-size: 8em;
 }
+
+.default-btn {
+  font-size: 20px;
+  color: #8447FF;
+  background-color: #85C7F2;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: 4px 2px #E42525;
+  margin: 1.2em;
+}
+
+.default-btn:hover{
+  color: #85C7F2 ;
+  background-color: #8447FF;
+  cursor: url('../images/rainbow-reverse.png'), auto;
+}
+
+
+.icons-style{
+  font-size: 1.4em;
+  color: #E42525;
+  text-decoration: none;
+}
+.icons-style h4{
+  font-size: 0.2em;
+}
+.icons-style:hover{
+  color: #7ee280; 
+}
+
+.icons-group{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 3em;
+}
+
+.user-menu{
+  margin-right: 2em;
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+  justify-content: right;
+  align-items: center;
+}
+
+/* style for random rainbow page */
+
+.title{
+  background-color: #E42525;
+  text-shadow: 2px 2px #FF99C9;
+  margin: 1em 10em;
+  padding: 1em;
+  font-size: 1.2em;
+}
+
+.artist{
+  color: #E42525;
+  margin: 1em;
+}
+
+.description{
+  margin: 2em 10em;
+  background: #F8E777;
+  
+}
+
+.duration{
+  background: #8447FF;
+  padding: 1em;
+  font-size: 0.8em;
+  margin: 2em 10em;
+}
+
+.duration-label{
+  margin-right: 1em;
+  margin: 1em;
+}
+
+.duration-select{
+  background-color: #F8E777;
+  border-radius: 10px;
+  padding: 0.2em;
+  color: #8447FF;
+  border: 2px solid #7EE280;;
+}
+
+.btn-random-video{
+  background-color: #F8E777;
+  color: #FF99C9;
+  padding: 0.5em;
+  border: none;
+  border-radius: 4px;
+  color: #8447FF;
+  border: 2px solid #7EE280;
+  font-size: 2em;
+  margin: 2em;
+}
+
+.btn-random-video:hover{
+  border: 2px solid #8447FF;
+  color: #F8E777;
+  background-color: transparent;
+}
+.btn-random-video-after{
+  font-size: 1em;
+}
+
+/* email verification */
+.email-confirmation{
+  color: red;
+  margin: 2em;
+}
+
+.email-confirmation-child{
+  margin:1em;
+  line-height: 2em;
+}
+
+.email-confirmation h2{
+  text-shadow: 2px 2px 5px #7EE280;
+}
+
+.none-text-decoration{
+  text-decoration: none;
+  color: #8447FF;
+}
+
+.none-text-decoration:hover{
+  color: #7EE280;
+  text-shadow: 1px 1px #8447FF;
+}
+
+/* Animations */
+
+/* color change of title Home Page */
 
 @keyframes colorChange {
   0% {
@@ -115,40 +248,16 @@
 }
 
 
-
-
-.default-btn {
-  font-size: 20px;
-  color: #8447FF;
-  background-color: #85C7F2;
-  padding: 10px 15px;
-  border-radius: 10px;
-  border: 4px 2px #E42525;
-  margin: 1.2em;
-}
-
-.default-btn:hover{
-  color: #85C7F2 ;
-  background-color: #8447FF;
-  cursor: url('../images/rainbow-reverse.png'), auto;
-}
-
-
-.icons-style{
-  font-size: 1.4em;
-  color: #E42525;
-  text-decoration: none;
-}
-.icons-style h4{
-  font-size: 0.2em;
-}
-.icons-style:hover{
-  color: #7ee280; 
-}
-
-.icons-group{
-  display: flex;
-  gap: 3em;
+@keyframes cursorChange {
+  0% {
+    cursor: url('../images/rainbow.png'), auto;
+  }
+  50% {
+    cursor: url('../images/rainbow-reverse.png'), auto;
+  }
+  100% {
+    cursor: url('../images/rainbow.png'), auto;
+  }
 }
 
 
@@ -164,15 +273,3 @@
   src: url(../fonts/8-bit-pusab.ttf);
 }
 
-.container {
-  font-family: 'Luckiest Guy', cursive;
-  font-size: 10px;
-}
-
-.curve-path {
-  fill: transparent;
-}
-
-.text {
-  fill: #FF9800;
-}
