change video player to be able to reach more links that not  only youtube

--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,10 @@ Red: #E42525
   color: #8447ff;
 }
 
+.player {
+  margin: auto;
+}
+
 .description {
   margin: 2em 10em;
   background: #f8e777;
