--- a/src/Util.css
+++ b/src/Util.css
@@ -68,3 +68,17 @@ Red: #E42525
   color: #8447ff;
   padding: 5px;
 }
+
+.player {
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
+  max-width: 80%;
+  max-height: 80%;
+}
+
+@media (max-width: 768px) {
+  .menu-btn {
+    margin: 0;
+  }
+}
