--- a/src/Util.css
+++ b/src/Util.css
@@ -75,6 +75,20 @@ Red: #E42525
   text-shadow: 2px 2px 2px #e42525;
 }
 
+.manifesto {
+  background-color: #f8e777;
+  padding: 20px;
+  text-shadow: 2px 2px #85c7f2;
+  border-radius: 10px;
+  font-size: 1em;
+  color: #e42525;
+  margin-top: 10px;
+}
+
+.manifesto h1 {
+  line-height: 60px;
+}
+
 .description-user {
   display: flex;
   justify-content: center;
@@ -99,5 +113,10 @@ Red: #E42525
 @media (max-width: 768px) {
   .menu-btn {
     margin: 0;
+  }
+
+  .manifesto h1 {
+    font-size: 0.8em;
+    line-height: 50px;
   }
 }
