change favicon and name on the browser

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* 
 COLOR PALLETE WEBSITE:
 Carnation Pink: #FF99C9
-Light Green: #
+Light Green: #7EE280
 Maize Yellow: #F8E777
 Veronica Purple: #8447FF
 Light Blue Sky: #85C7F2
