add vercel analytics

--- a/src/Util.css
+++ b/src/Util.css
@@ -17,7 +17,7 @@ Red: #E42525
   padding: 10px 15px;
   border-radius: 10px;
   border: 1px solid #7ee280;
-  margin: 1.2em;
+  margin: 10px auto;
 }
 
 .default-btn:hover {
