--- a/src/Util.css
+++ b/src/Util.css
@@ -1,22 +1,25 @@
 /* 
 COLOR PALLETE WEBSITE:
 Carnation Pink: #FF99C9
-Light Green: #7EE280
+Light Green: #BCF0BD
 Maize Yellow: #F8E777
 Veronica Purple: #8447FF
 Light Blue Sky: #85C7F2
 Red: #E42525
 */
 
+
+
 /* buttons */
 
 .default-btn {
   font-size: 20px;
-  color: #8447ff;
-  background-color: #85c7f2;
+  color: #E42525;
+  background-color: #FF99C9;
   padding: 10px 15px;
   border-radius: 10px;
-  border: 1px solid #7ee280;
+  border: 1px solid #FF99C9;
+  box-shadow: 0px 4px 8px #FF99C9;
   margin: 10px auto;
 }
 
