--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,3 @@
-/* Adobe Typekit Font Import */
-@import url("https://p.typekit.net/p.css?s=1&k=wia6mva&ht=tk&f=28337&a=85017181&app=typekit&e=css");
-
-@font-face {
-  font-family: "lores-9-plus-wide";
-  src: url("https://use.typekit.net/af/96a625/00000000000000007735bf8c/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),
-       url("https://use.typekit.net/af/96a625/00000000000000007735bf8c/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),
-       url("https://use.typekit.net/af/96a625/00000000000000007735bf8c/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
-  font-display: auto;
-  font-style: normal;
-  font-weight: 400;
-  font-stretch: normal;
-}
 
 /* 
 COLOR PALLETE WEBSITE:
@@ -21,29 +8,51 @@ Veronica Purple: #8447FF
 Light Blue Sky: #85C7F2
 Red: #E42525
 */
+
+:root {
+  --carnation-pink: #FF99C9;
+  --light-green: #7EE280;
+  --maize-yellow: #F8E777;
+  --veronica-purple: #8447FF;
+  --light-blue-sky: #85C7F2;
+  --red: #E42525;
+}
+
+@import url("https://p.typekit.net/p.css?s=1&k=wia6mva&ht=tk&f=28337&a=85017181&app=typekit&e=css");
+
+@font-face {
+  font-family: "lores-9-plus-wide";
+  src: url("https://use.typekit.net/af/96a625/00000000000000007735bf8c/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),
+       url("https://use.typekit.net/af/96a625/00000000000000007735bf8c/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),
+       url("https://use.typekit.net/af/96a625/00000000000000007735bf8c/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+  font-display: auto;
+  font-style: normal;
+  font-weight: 400;
+  font-stretch: normal;}
+
 .App {
   text-align: center;
-  min-height: 100vh;
-
-  background-size: 110% 110%;
   cursor: url("../images/cursor.png"), auto;
   animation: cursorChange 1s infinite;
   margin: 0;
   padding: 1em 2em;
   overflow: auto;
-  box-shadow: 0 0 10px 0 white, 0 0 20px 0 #7EE280;
+
 }
 
 /* Add this to ensure the html and body also fill the viewport */
-html, body {
+body {
   background: url("../images/background.png") no-repeat center center fixed;
-  background-size: 110% 110%;
+  background-size: 110% 110%;  /* Changed from 110% 100% to cover */
   background-color: #FF99C9;
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
-  font-family: lores-9-plus-wide;
+}
+
+html{
+  background-color: #FF99C9;
 }
 
 .logo-title{
@@ -164,59 +173,6 @@ html, body {
   justify-content: center;
 }
 
-/* style for random rainbow page */
-
-
-
-.description {
-  margin: 2em auto;
-  background: #f8e777;
-  max-width: 70%;
-}
-
-.duration {
-  background: #8447ff;
-  padding: 1em;
-  font-size: 0.8em;
-  margin: 20px auto 10px auto;
-  max-width: 40%;
-  min-width: 330px;
-  border-radius: 10px;
-}
-
-.duration-label {
-  margin: 5px 0;
-}
-
-.duration-select {
-  background-color: #f8e777;
-  border-radius: 10px;
-  padding: 0.2em;
-  color: #8447ff;
-  border: 2px solid #7ee280;
-  max-width: 80%;
-}
-
-.btn-random-video {
-  background-color: #f8e777;
-  color: #ff99c9;
-  padding: 0.5em;
-  border: none;
-  border-radius: 4px;
-  color: #8447ff;
-  border: 2px solid #7ee280;
-  font-size: 2em;
-  margin: 1px auto;
-}
-
-.btn-random-video:hover {
-  border: 2px solid #8447ff;
-  color: #f8e777;
-  background-color: transparent;
-}
-.btn-random-video-after {
-  font-size: 1em;
-}
 
 /* email verification */
 .email-confirmation {
