--- a/src/styles/RandomCard.css
+++ b/src/styles/RandomCard.css
@@ -1,14 +1,29 @@
 .title {
     margin: 10px auto;
-    max-width: 80%;
+    max-width: 50%;
     padding: 1em;
     font-size: 1.2em;
-    color:red;
+    color: var(--red);
+    border: 10px dotted var(--light-green);
+    border-radius: 20px;
+  }
+
+  .player{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90vw;
+    height: 50.625vw;
+    max-width: 1200px;
+    margin: 0 auto;
+    background-color: transparent;
   }
   
   .artist {
-    color: #e42525;
+    color: var(--carnation-pink);
     margin: 1em auto;
+    font-family: "lores-9-plus-wide";
+    font-size:1.5em;
   }
   
   .artist:hover {
@@ -16,3 +31,52 @@
     text-shadow: 2px 2px #85c7f2;
   }
   
+  .description {
+    margin: 2em auto;
+    background: #f8e777;
+    max-width: 70%;
+  }
+  
+  .duration {
+    background: #8447ff;
+    padding: 1em;
+    font-size: 0.8em;
+    margin: 20px auto 10px auto;
+    max-width: 40%;
+    min-width: 330px;
+    border-radius: 10px;
+  }
+  
+  .duration-label {
+    margin: 5px 0;
+  }
+  
+  .duration-select {
+    background-color: #f8e777;
+    border-radius: 10px;
+    padding: 0.2em;
+    color: #8447ff;
+    border: 2px solid #7ee280;
+    max-width: 80%;
+  }
+  
+  .btn-random-video {
+    background-color: #f8e777;
+    color: #ff99c9;
+    padding: 0.5em;
+    border: none;
+    border-radius: 4px;
+    color: #8447ff;
+    border: 2px solid #7ee280;
+    font-size: 2em;
+    margin: 1px auto;
+  }
+  
+  .btn-random-video:hover {
+    border: 2px solid #8447ff;
+    color: #f8e777;
+    background-color: transparent;
+  }
+  .btn-random-video-after {
+    font-size: 1em;
+  }
