--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,8 @@ Red: #E42525
   font-weight: 400;
   font-stretch: normal;}
 
+@import url("https://use.typekit.net/wia6mva.css");
+
 .App {
   text-align: center;
   cursor: url("../images/cursor.png"), auto;
