--- a/src/styles/RandomCard.css
+++ b/src/styles/RandomCard.css
@@ -2,11 +2,16 @@
     margin: 10px auto;
     max-width: 50%;
     padding: 1em;
-    font-size: 1.2em;
+    font-size: 2em;
     color: var(--red);
     border: 10px dotted var(--light-green);
     border-radius: 20px;
+    font-family: lores-9-plus-narrow;
+    /* -webkit-text-stroke: 1px var(--light-green); */
+
   }
+
+  @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Protest+Strike&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sixtyfour+Convergence&display=swap');
 
   .player{
     display: flex;
@@ -33,8 +38,20 @@
   
   .description {
     margin: 2em auto;
-    background: #f8e777;
-    max-width: 70%;
+    color: var(--red);
+    -webkit-text-stroke: 1.2px var(--carnation-pink);
+    max-width: 90%;
+    font-family: Roboto;
+    font-style: normal;
+    line-height: 1.5;
+    white-space: pre-line;
+    text-align: left;
+    padding: 1em;
+    text-align: center;
+    background-color: rgba(255, 153, 201, 0.4); /* Adding transparency to the background color */
+    box-shadow: 0px 0px 20px var(--carnation-pink);
+    border-radius: 20px;
+    font-size: 1.3em;
   }
   
   .duration {
