--- a/src/styles/RandomCard.css
+++ b/src/styles/RandomCard.css
@@ -1,17 +1,25 @@
 .title {
-    margin: 10px auto;
-    max-width: 50%;
-    padding: 1em;
-    font-size: 2em;
+    display: inline-block;
+    margin: 0 auto;
+    font-size: 2.5em;
     color: var(--red);
-    border: 10px dotted var(--light-green);
-    border-radius: 20px;
     font-family: lores-9-plus-narrow;
+    /* border-bottom: 10px dotted var(--red); */
+    text-shadow: 2px 2px 1px var(--red);
+    color: var(--carnation-pink);
     /* -webkit-text-stroke: 1px var(--light-green); */
 
   }
 
   @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Protest+Strike&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sixtyfour+Convergence&display=swap');
+
+  @import url("https://p.typekit.net/p.css?s=1&k=wia6mva&ht=tk&f=28316.28317.28336.28337.30361&a=85017181&app=typekit&e=css");
+  
+  @font-face {
+    font-family:"forma-djr-micro";
+    src:url("https://use.typekit.net/af/9f9862/00000000000000003b9ae4e0/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/9f9862/00000000000000003b9ae4e0/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/9f9862/00000000000000003b9ae4e0/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+    font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
+    }
 
   .player{
     display: flex;
@@ -20,15 +28,16 @@
     width: 90vw;
     height: 50.625vw;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 20px auto;
     background-color: transparent;
   }
   
   .artist {
-    color: var(--carnation-pink);
-    margin: 1em auto;
-    font-family: "lores-9-plus-wide";
+    color: var(--red);
+    margin: 10px auto;
+    font-family: "lores-12";
     font-size:1.5em;
+    -webkit-text-stroke: 1px var(--carnation-pink);
   }
   
   .artist:hover {
@@ -41,15 +50,12 @@
     color: var(--red);
     -webkit-text-stroke: 1.2px var(--carnation-pink);
     max-width: 90%;
-    font-family: Roboto;
-    font-style: normal;
+    font-family: forma-djr-micro;
     line-height: 1.5;
     white-space: pre-line;
     text-align: left;
     padding: 1em;
     text-align: center;
-    background-color: rgba(255, 153, 201, 0.4); /* Adding transparency to the background color */
-    box-shadow: 0px 0px 20px var(--carnation-pink);
     border-radius: 20px;
     font-size: 1.3em;
   }
@@ -78,22 +84,26 @@
   }
   
   .btn-random-video {
-    background-color: #f8e777;
-    color: #ff99c9;
+    background-color: transparent;
+    width: 90%;
+    max-width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0.5em;
     border: none;
     border-radius: 4px;
-    color: #8447ff;
-    border: 2px solid #7ee280;
     font-size: 2em;
     margin: 1px auto;
   }
-  
-  .btn-random-video:hover {
-    border: 2px solid #8447ff;
-    color: #f8e777;
-    background-color: transparent;
-  }
+
+
   .btn-random-video-after {
     font-size: 1em;
+  }
+
+  .btn-random-video img {
+    width: 100%;
+    height: auto;
+    max-width: 600px;
   }
