--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,6 +13,27 @@
 .icons-style h3 {
   font-size: 0.3em;
 }
+
+.icons-group-on {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  margin-right:20px;
+}
+
+.icons-group-off {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  margin-right:80px;
+}
+
+
+
 .icons-style:hover {
   color: var(--carnation-pink);
   cursor: url("../../images/rainbow-reverse.png"), auto;
