--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -29,7 +29,7 @@
   align-items: center;
   justify-content: center;
   gap: 50px;
-  margin-right:90px;
+  /* margin-right:90px; */
 }
 
 
@@ -37,4 +37,9 @@
 .icons-style:hover {
   color: var(--carnation-pink);
   cursor: url("../../images/rainbow-reverse.png"), auto;
+}
+
+.selected {
+  color: var(--carnation-pink); 
+  text-shadow: 2px 2px 1px var(--red);
 }
