--- a/src/VideoList.css
+++ b/src/VideoList.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --carnation-pink: #FF99C9;
   --light-green: #7EE280;
   --maize-yellow: #F8E777;
@@ -58,4 +58,4 @@
   text-align: center;
   background-color: #85c7f2;
   color: #8447ff;
-}
+} */
